[package]
name = "tokio-codec"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0-alpha.2"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-codec/0.2.0-alpha.2/tokio_codec"
description = """
Utilities for encoding and decoding frames.
"""
categories = ["asynchronous"]

[features]
log = ["tracing/log"]

[dependencies]
tokio-io = { version = "=0.2.0-alpha.2", path = "../tokio-io" }

bytes = "0.4.7"
futures-core-preview = "=0.3.0-alpha.18"
futures-sink-preview = "=0.3.0-alpha.18"

tracing = { version = "0.1.6", optional = true }

[dev-dependencies]
tokio = { version = "0.2.0-alpha.1", path = "../tokio" }
tokio-test = { version = "0.2.0-alpha.1", path = "../tokio-test" }

futures-util-preview = "=0.3.0-alpha.18"

[package.metadata.docs.rs]
all-features = true
